--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ doc/using_bib.html
 
 doc/Doxyfile
 include/simgrid_config.h
+include/smpi/smpif.h
 include/instr/tracing_config.h
 examples/amok/bandwidth/bandwidth_maestro
 examples/amok/bandwidth/bandwidth_sensor
