--- a/teshsuite/msg/CMakeLists.txt
+++ b/teshsuite/msg/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}")	
 
-add_executable(get_sender ${PROJECT_DIRECTORY}/teshsuite/msg/get_sender.c)
+add_executable(get_sender ${CMAKE_HOME_DIRECTORY}/teshsuite/msg/get_sender.c)
 
 ### Add definitions for compile
 if(NOT WIN32)
