--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,103 @@
-checkall.log
-TAGS
-*output_tesh*.txt
-
-*.exe
-*.bpr
-*.bpf
-*.dsp
-*.ilk
-*.mk
-
+################################################
+###OTHER CAT
 *.l[oa]
 *.loT
 *.[oa]
-*.class
-.libs
-.deps
-.dirstamp
-stamp*
-.emacs.desktop
-CMakeFiles
-CMakeCache.txt
-DartConfiguration.tcl
-Testing/
-Makefile
-test_rl
-test_sg
-_*.c
 *~
-*.swp
-*_simulator
-*_old.xml
 *.log
-*.trace
-*.orig
-*.rej
+*_simulator
 
+################################################
+### Simgrid java
+*.class
 simgrid.jar
 src/simgrid.jar
+
+################################################
+### Libraries links 
 src/bindings/ruby/simgrid.so
 examples/ruby/simgrid.so
 examples/lua/simgrid.so
 src/bindings/ruby/libsimgrid.so
 examples/gras/console/simgrid.so
-examples/msg/icomms/cmd.sh
 examples/msg/masterslave/simgrid.so
 examples/simdag/simgrid.so
 
+################################################
+### Units and supernovae files
+src/simgrid_units_main.c
+src/*_unit.c
+src/supernovae_*.c
+
+################################################
+### Generated files
+_*.c
+include/simgrid_config.h
+include/instr/tracing_config.h
+src/context_sysv_config.h
+src/gras_config.h
+src/smpi/smpicc
+src/smpi/smpirun
+include/smpi/smpif.h
+
+################################################
+### Cmake files
+CPackConfig.cmake
+CPackSourceConfig.cmake
+CTestTestfile.cmake
+conftestval
+cmake_install.cmake
+CMakeFiles
+install_manifest.txt
+_CPack_Packages/
+CMakeFiles
+CMakeCache.txt
+DartConfiguration.tcl
+Testing/
+Makefile
+bin/
+lib/
+buildtools/Cmake/test_prog/prog_va_copy.c
+
+
+################################################
+### windows borland
+*.bpr
+*.bpf
+
+################################################
+### Documentation
+doc/all_bib.html
+doc/logcategories.sh
+doc/publis_core.bib
+doc/publis_core_bib.html
+doc/publis_count.html
+doc/publis_extern.bib
+doc/publis_extern_bib.html
+doc/publis_intra.bib
+doc/publis_intra_bib.html
+doc/realtoc.sh
+doc/tmp.realtoc
+doc/using_bib.html
+doc/Doxyfile
+
+################################################
+### Specific of project 
+.cproject
+.project
+.settings/
+.anjuta
+.anjuta_sym_db.db
+simgrid.anjuta
+.externalToolBuilders/
+Debug/
+.emacs.desktop
+
+################################################
+### Examples and traces
+*.exe
+testgraph.dot
+testgraph.xml
 examples/msg/ms.trace
 examples/msg/procmig.trace
 examples/msg/tasks.trace
@@ -65,7 +117,6 @@ examples/simdag/ex_sd_seq_access
 examples/simdag/sd_seq_access
 examples/msg/icomms/peer
 examples/msg/icomms/peer2
-
 examples/gras/console/ping_client_console
 examples/gras/console/ping_server_console
 examples/gras/console/ping_simulator_console
@@ -76,44 +127,11 @@ examples/msg/masterslave/masterslave_console
 examples/simdag/ex_sd_test_console
 examples/simdag/sd_test_console
 examples/simdag/scheduling/Montage_25.jed
-
 examples/msg/irc_isend/peer
 examples/msg/irc_isend/toto.txt
 examples/simdag/dot/dot_test
-
-src/simgrid_units_main.c
-src/*_unit.c
-src/supernovae_*.c
-
-testgraph.dot
-testgraph.xml
-conftestval
-cmake_install.cmake
-CMakeFiles
-install_manifest.txt
-_CPack_Packages/
-
 examples/smpi/toto.txt
 examples/java/*/classnoinst.stamp
-buildtools/Cmake/test_prog/prog_va_copy.c
-###
-doc/all_bib.html
-doc/logcategories.sh
-doc/publis_core.bib
-doc/publis_core_bib.html
-doc/publis_count.html
-doc/publis_extern.bib
-doc/publis_extern_bib.html
-doc/publis_intra.bib
-doc/publis_intra_bib.html
-doc/realtoc.sh
-doc/tmp.realtoc
-doc/using_bib.html
-
-doc/Doxyfile
-include/simgrid_config.h
-include/smpi/smpif.h
-include/instr/tracing_config.h
 examples/amok/bandwidth/bandwidth_maestro
 examples/amok/bandwidth/bandwidth_sensor
 examples/amok/saturate/saturate_maestro
@@ -187,14 +205,7 @@ examples/smpi/alltoall_basic
 examples/smpi/alltoallv
 examples/smpi/sendrecv
 examples/smpi/smpi_sendrecv
-
-src/context_sysv_config.h
-src/gras_config.h
-src/smpi/smpicc
-src/smpi/smpirun
 src/testall
-src/ucontext_stack.h
-teshsuite/datadesc_usage.out
 teshsuite/gras/datadesc/datadesc_usage
 teshsuite/gras/empty_main/empty_main_function
 teshsuite/gras/msg_handle/msg_handle_client
@@ -248,15 +259,7 @@ examples/gras/spawn/spawn_child
 examples/gras/spawn/spawn_father
 examples/smpi/smpi_traced
 examples/smpi/ttest01
-
-.cproject
-.project
-.settings/
-.anjuta
-.anjuta_sym_db.db
-simgrid.anjuta
-
-.externalToolBuilders/
-Debug/
-bin/
-lib/
+teshsuite/datadesc_usage.out
+test_rl
+test_sg
+examples/smpi/smpi_traced.trace
