Add version of simgrid into the footer of the documentation.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@8876 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/doc/footer.html.in
+++ b/doc/footer.html.in
@@ -7,6 +7,9 @@
 <a href="index.html"><b>
 Back to the main Simgrid Documentation page</b></a>
 </td>
+<td align=middle>
+<small>The version of Simgrid documented in this document is for v@release_version@.
+</td>
 <td align=right>
 <small>Generated for SimGridAPI by
 <a href="http://www.doxygen.org/index.html">
