--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ src/context_sysv_config.h
 src/gras_config.h
 src/smpi/smpicc
 src/smpi/smpirun
+include/smpi/smpif.h
+doc/footer.html
 
 ################################################
 ### Cmake files
