SIMGRID NEED PERL!!!!
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@8880 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(libsmpi_version "${release_version}")
 FIND_PROGRAM(GCOV_PATH gcov)
 FIND_PROGRAM(VALGRIND_PATH valgrind)
 include(FindPerl)
+if(NOT PERL_EXECUTABLE)
+	message(FATAL_ERROR "-- SIMGRID NEED PERL")
+endif(NOT PERL_EXECUTABLE)
+
 
 ### SET THE LIBRARY EXTENSION
 if(APPLE)
