--- a/doc/footer.html.in
+++ b/doc/footer.html.in
@@ -8,7 +8,9 @@
 Back to the main Simgrid Documentation page</b></a>
 </td>
 <td align=middle>
-<small>The version of Simgrid documented in this document is for v@release_version@.
+<small>The version of Simgrid documented here is v@release_version@.<br/>
+Documentation of other versions can be found in their respective
+archive files (directory doc/html).
 </td>
 <td align=right>
 <small>Generated for SimGridAPI by
