For additional files put them into EXTRA_DIST list.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@8885 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/examples/simdag/dot/CMakeLists.txt
+++ b/examples/simdag/dot/CMakeLists.txt
@@ -22,3 +22,11 @@ else(NOT WIN32)
 	 PROPERTIES
 	 ADDITIONAL_MAKE_CLEAN_FILES "${extra_clean_files};${CMAKE_CURRENT_BINARY_DIR}/dot_test; ${CMAKE_CURRENT_BINARY_DIR}/simulate_dot;")
 endif(NOT WIN32)
+
+set(EXTRA_DIST
+	${EXTRA_DIST}
+	${CMAKE_CURRENT_BINARY_DIR}/dag_with_bad_schedule.dot
+	${CMAKE_CURRENT_BINARY_DIR}/dag_with_cycle.dot
+	${CMAKE_CURRENT_BINARY_DIR}/dag_with_good_schedule.dot
+	${CMAKE_CURRENT_BINARY_DIR}/simulate_dot.c
+)
