--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.log
 *_simulator
 *.mk
+*.swp
 
 ################################################
 ### Simgrid java
@@ -94,6 +95,7 @@ simgrid.anjuta
 .externalToolBuilders/
 Debug/
 .emacs.desktop
+tags
 
 ################################################
 ### Examples and traces
