--- a/examples/msg/actions/CMakeLists.txt
+++ b/examples/msg/actions/CMakeLists.txt
@@ -6,3 +6,15 @@ add_executable(actions actions.c)
 
 ### Add definitions for compile
 target_link_libraries(actions simgrid m )
+
+### Get our action files in the archive
+set(EXTRA_DIST ${EXTRA_DIST} 
+	examples/msg/actions/actions_allReduce.txt
+	examples/msg/actions/actions_barrier.txt
+	examples/msg/actions/actions_bcast.txt
+	examples/msg/actions/actions_reduce.txt
+	examples/msg/actions/actions_split_p0.txt
+	examples/msg/actions/actions_split_p1.txt
+	examples/msg/actions/actions.txt
+	examples/msg/actions/actions_with_isend.txt
+	)
