--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -199,7 +199,7 @@ APPLICATIONFOOT
 
 ##---------------------- SMPI TRACING OPTIONS ---------------------------------
   if [ -n "${TRACEOPT}" ]; then
-    TRACEOPTIONS="--cfg=tracing:1 --cfg=tracing/filename:${TRACEOPT} --cfg=tracing/smpi:1 --cfg=tracing/categorized:1"
+    TRACEOPTIONS="--cfg=tracing:1 --cfg=tracing/filename:${TRACEOPT} --cfg=tracing/smpi:1 --cfg=tracing/categorized:1 --cfg=tracing/uncategorized:1"
   else
     TRACEOPTIONS=""
   fi
