[trace] new option for smpirun (-triva) to generate graph configurations for triva
details:
- two files are created if -triva is passed as parameter
     smpi_cat.plist <- graph configuration with categories that might have been used in the code
     smpi_uncat.plist <- graph configuration for uncategorized resource utilization

git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9042 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -59,6 +59,11 @@ while true; do
    	  shift 2
    ;;
 
+   "-triva")
+   	TRIVA="true"
+   	  shift 1
+   ;;
+
    "-keep-temps")
 	KEEP="true"
       shift 1
@@ -203,13 +208,19 @@ APPLICATIONFOOT
   else
     TRACEOPTIONS=""
   fi
+
+  if [ -n "${TRIVA}" ]; then
+    TRIVAOPTIONS="--cfg=triva/categorized:smpi_cat.plist --cfg=triva/uncategorized:smpi_uncat.plist"
+  else
+    TRIVAOPTIONS=""
+  fi
 ##---------------------- end SMPI TRACING OPTIONS ---------------------------------
 
 export SMPI_GLOBAL_SIZE=${NUMPROCS}
 if [ -n "${KEEP}" ] ; then
-  echo ${EXEC} ${SIMOPTS} ${TRACEOPTIONS} ${PLATFORMTMP} ${APPLICATIONTMP}
+  echo ${EXEC} ${SIMOPTS} ${TRACEOPTIONS} ${TRIVAOPTIONS} ${PLATFORMTMP} ${APPLICATIONTMP}
 fi
-${EXEC} ${SIMOPTS} ${TRACEOPTIONS} ${PLATFORMTMP} ${APPLICATIONTMP}
+${EXEC} ${SIMOPTS} ${TRACEOPTIONS} ${TRIVAOPTIONS} ${PLATFORMTMP} ${APPLICATIONTMP}
 
 if [ -z "${KEEP}" ] ; then
    if [ -z "${PLATFORM}" ]; then
