--- a/buildtools/Cmake/gras_config.h.in
+++ b/buildtools/Cmake/gras_config.h.in
@@ -86,6 +86,11 @@
 /* Predefined possible va_copy() implementation (id: GCM) */
 #cmakedefine __VA_COPY_USE_GCM(d, s) @__VA_COPY_USE_GCM@
 
+/* Used to select the flavor of assembly that we need today */
+#cmakedefine PROCESSOR_i686 @PROCESSOR_i686@
+#cmakedefine PROCESSOR_x86_64 @PROCESSOR_x86_64@
+#cmakedefine CMAKE_SYSTEM_PROCESSOR @CMAKE_SYSTEM_PROCESSOR@
+
 /* Defined if arrays in struct can straddle struct alignment boundaries. This
    is like than the structure compaction above, but this time, the argument to
    be compacted is an array whom each element would be normally compacted.
