--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,7 @@ examples/msg/tracing/tasks
 examples/msg/tracing/volume
 examples/msg/mc/bugged3
 examples/msg/mc/random_test
+examples/msg/chord/chord
 examples/simdag/ex_sd_seq_access
 examples/simdag/sd_seq_access
 examples/msg/icomms/peer
