Remove generated file
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9277 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/.gitignore
+++ b/.gitignore
@@ -212,6 +212,7 @@ examples/smpi/alltoall_basic
 examples/smpi/alltoallv
 examples/smpi/sendrecv
 examples/smpi/smpi_sendrecv
+src/replay/replay
 src/testall
 teshsuite/gras/datadesc/datadesc_usage
 teshsuite/gras/empty_main/empty_main_function
