Only evaluate the arguments needed.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9293 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/buildtools/Cmake/gras_config.h.in
+++ b/buildtools/Cmake/gras_config.h.in
@@ -13,6 +13,9 @@
 	#endif
 #endif
 
+#cmakedefine SIZEOF_INT @SIZEOF_INT@
+#cmakedefine SIZEOF_VOIDP @SIZEOF_VOIDP@
+
 #ifndef __STRICT_ANSI__
 	#cmakedefine __STRICT_ANSI__ @__STRICT_ANSI__@
 #endif
