Fix SMPI scripts against the target directory
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9352 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/src/smpi/smpiff.in
+++ b/src/smpi/smpiff.in
@@ -1,5 +1,5 @@
 #! /bin/bash
-prefix="@prefix@"
+prefix="@exec_prefix@"
 
 ARGS="-DMAIN__=user_main -Diargc_=smpi_process_argc -Dgetarg_=smpi_process_getarg -lf2c"
 SRCFILES=""
