Test if having futex.h. If it's not present use xbt_os_thread.h
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9360 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/buildtools/Cmake/gras_config.h.in
+++ b/buildtools/Cmake/gras_config.h.in
@@ -42,6 +42,9 @@
 /* Set to true if lib pcre is present */
 #cmakedefine HAVE_PCRE_LIB @HAVE_PCRE_LIB@
 
+/* If have linux_futex.h */
+#cmakedefine HAVE_FUTEX_H @HAVE_FUTEX_H@
+
 /* Some variable for graphviz */
 #cmakedefine HAVE_GRAPH_H @GRAPH_H@
 #cmakedefine HAVE_CGRAPH_H @CGRAPH_H@
