--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,27 @@ else(APPLE)
 endif(APPLE)
 
 ### Set some variables for Cmake
-SET(LIBRARY_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/lib)
-set(INCLUDES ${CMAKE_HOME_DIRECTORY} ${CMAKE_HOME_DIRECTORY}/include ${CMAKE_HOME_DIRECTORY}/src/include ${CMAKE_HOME_DIRECTORY}/src)
+SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
+
+if("${CMAKE_BINARY_DIR}" STREQUAL "${CMAKE_HOME_DIRECTORY}")
+	set(INCLUDES
+	${CMAKE_HOME_DIRECTORY}
+	${CMAKE_HOME_DIRECTORY}/include
+	${CMAKE_HOME_DIRECTORY}/src
+	${CMAKE_HOME_DIRECTORY}/src/include
+	)
+else("${CMAKE_BINARY_DIR}" STREQUAL "${CMAKE_HOME_DIRECTORY}")
+	set(INCLUDES
+	${CMAKE_HOME_DIRECTORY}
+	${CMAKE_HOME_DIRECTORY}/include
+	${CMAKE_HOME_DIRECTORY}/src
+	${CMAKE_HOME_DIRECTORY}/src/include
+	${CMAKE_BINARY_DIR}
+	${CMAKE_BINARY_DIR}/include
+	${CMAKE_BINARY_DIR}/src
+	)
+endif("${CMAKE_BINARY_DIR}" STREQUAL "${CMAKE_HOME_DIRECTORY}")
+
 set(INCLUDES ${INCLUDES} ${CMAKE_HOME_DIRECTORY} ${CMAKE_HOME_DIRECTORY}/include ${CMAKE_HOME_DIRECTORY}/src/include ${CMAKE_HOME_DIRECTORY}/src ${CMAKE_CURRENT_BINARY_DIR}/src)
 if(WIN32)
     set(INCLUDES ${INCLUDES} ${CMAKE_HOME_DIRECTORY}/include/xbt ${CMAKE_HOME_DIRECTORY}/src/xbt) #for win32_ucontext.[ch]
