We have to somehow rely on F2C if we want it.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9370 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ src/supernovae_*.c
 _*.c
 include/simgrid_config.h
 include/instr/tracing_config.h
+include/smpi/smpif.h
 src/context_sysv_config.h
 src/gras_config.h
 src/smpi/smpicc
