--- a/include/smpi/smpif.h.in
+++ b/include/smpi/smpif.h.in
@@ -7,10 +7,17 @@
 #ifndef SMPIF_H
 #define SMPIF_H
 
+#cmakedefine HAVE_F2C_H @HAVE_SMPI_F2C_H@
+
+#ifndef HAVE_F2C_H
+#error F2C is mandatory
+#endif
+
 #include <xbt/misc.h>
+#include <f2c.h>
 
 XBT_PUBLIC(int) smpi_process_argc(void);
-XBT_PUBLIC(int) smpi_process_getarg(int* index, char* dst, size_t len);
+XBT_PUBLIC(int) smpi_process_getarg(integer* index, char* dst, ftnlen len);
 XBT_PUBLIC(int) smpi_global_rank(void);
 XBT_PUBLIC(int) smpi_global_size(void);
 
