--- a/include/smpi/smpif.h.in
+++ b/include/smpi/smpif.h.in
@@ -14,11 +14,11 @@
 #endif
 
 #include <xbt/misc.h>
+#include <smpi/smpi.h>
 #include <f2c.h>
 
 XBT_PUBLIC(int) smpi_process_argc(void);
 XBT_PUBLIC(int) smpi_process_getarg(integer* index, char* dst, ftnlen len);
-XBT_PUBLIC(int) smpi_global_rank(void);
 XBT_PUBLIC(int) smpi_global_size(void);
 
 #endif
