--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -105,7 +105,7 @@ if [ -z "${PLATFORM}" ]; then
 
 	cat > ${PLATFORMTMP} <<PLATFORMHEAD
 <?xml version='1.0'?>
-<!DOCTYPE platform SYSTEM "simgrid.dtd">
+<!DOCTYPE platform SYSTEM "http://simgrid.gforge.inria.fr/simgrid.dtd">
 <platform version="3">
 <AS id="AS0" routing="Full">
 PLATFORMHEAD
@@ -143,7 +143,7 @@ APPLICATIONTMP="$(mktemp tmpXXXXXX)"
 
 cat > ${APPLICATIONTMP} <<APPLICATIONHEAD
 <?xml version='1.0'?>
-<!DOCTYPE platform SYSTEM "simgrid.dtd">
+<!DOCTYPE platform SYSTEM "http://simgrid.gforge.inria.fr/simgrid.dtd">
 <platform version="3">
 APPLICATIONHEAD
 
