Add parallel contexts test binary to .gitignore
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9559 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,8 @@ examples/msg/trace/test_trace_integration
 examples/msg/mc/centralized
 examples/msg/mc/bugged2
 examples/msg/mc/bugged1
+examples/msg/parallel_contexts/pcontexts
+examples/msg/parallel_contexts/pcontexts2
 examples/simdag/ex_sd_test
 examples/simdag/ex_sd_test2
 examples/simdag/metaxml/sd_meta
