--- a/include/simgrid_config.h.in
+++ b/include/simgrid_config.h.in
@@ -95,6 +95,9 @@ XBT_PUBLIC(char *) bvprintf(const char *fmt, va_list ap);
 XBT_PUBLIC(char *) bprintf(const char *fmt, ...) _XBT_GNUC_PRINTF(1, 2);
 /** @} */
 
+/* Define if xbt contexts are based on our threads implementation or not */
+#cmakedefine CONTEXT_THREADS @CONTEXT_THREADS@
+
 /* Tracing SimGrid */
 #cmakedefine HAVE_TRACING @HAVE_TRACING@
 
