added jedule output to SimDAG
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9595 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/include/simgrid_config.h.in
+++ b/include/simgrid_config.h.in
@@ -101,6 +101,9 @@ XBT_PUBLIC(char *) bprintf(const char *fmt, ...) _XBT_GNUC_PRINTF(1, 2);
 /* Tracing SimGrid */
 #cmakedefine HAVE_TRACING @HAVE_TRACING@
 
+/* Jedule output  */
+#cmakedefine HAVE_JEDULE @HAVE_JEDULE@
+
 /* Tracking of latency bound */
 #cmakedefine HAVE_LATENCY_BOUND_TRACKING @HAVE_LATENCY_BOUND_TRACKING@
 
