Need to set DIR_IS_LINK for use pwd -P
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9604 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ if(NOT PERL_EXECUTABLE)
 	message(FATAL_ERROR "-- SimGrid cannot be compiled without Perl installed -- sorry. Bailling out.")
 endif(NOT PERL_EXECUTABLE)
 
-if(UNIX AND NOT APPLE)
+set(DIR_IS_LINK false) 
+
+if(UNIX AND NOT APPLE AND DIR_IS_LINK)
 	exec_program("${CMAKE_COMMAND} -E chdir \"${CMAKE_HOME_DIRECTORY}\" pwd -P" OUTPUT_VARIABLE TRUE_CMAKE_HOME_DIRECTORY)
 	if(${TRUE_CMAKE_HOME_DIRECTORY} STREQUAL ${CMAKE_HOME_DIRECTORY})
 	else(${TRUE_CMAKE_HOME_DIRECTORY} STREQUAL ${CMAKE_HOME_DIRECTORY})
@@ -64,7 +66,7 @@ if(UNIX AND NOT APPLE)
 		message(STATUS "Change link path '${CMAKE_BINARY_DIR}' to true path '${TRUE_CMAKE_BINARY_DIR}'")
 		set(CMAKE_BINARY_DIR "${TRUE_CMAKE_BINARY_DIR}" CACHE TYPE INTERNAL FORCE)
 	endif(${TRUE_CMAKE_BINARY_DIR} STREQUAL ${CMAKE_BINARY_DIR})	
-endif(UNIX AND NOT APPLE)
+endif(UNIX AND NOT APPLE AND DIR_IS_LINK)
 
 ### Set some variables for Cmake
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
