--- a/examples/smpi/CMakeLists.txt
+++ b/examples/smpi/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(mvmul mvmul.c)
 add_executable(smpi_sendrecv sendrecv.c)
 add_executable(smpi_traced smpi_traced.c)
 add_executable(ttest01 ttest01.c)
+add_executable(mc_bugged1 mc_bugged1.c)
 
 target_link_libraries(alltoall2 m simgrid smpi )
 target_link_libraries(alltoall_basic m simgrid smpi )
@@ -43,5 +44,6 @@ target_link_libraries(mvmul m simgrid smpi )
 target_link_libraries(smpi_sendrecv m simgrid smpi )
 target_link_libraries(smpi_traced m simgrid smpi )
 target_link_libraries(ttest01 m simgrid smpi )
+target_link_libraries(mc_bugged1 m simgrid smpi )
 
 set_target_properties(smpi_sendrecv PROPERTIES RENAME sendrecv)
