Add another SMPI bugged example to test the MC.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/simgrid/simgrid/trunk@9632 48e7efb5-ca39-0410-a469-dd3cf9ba447f

--- a/examples/smpi/CMakeLists.txt
+++ b/examples/smpi/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(smpi_sendrecv sendrecv.c)
 add_executable(smpi_traced smpi_traced.c)
 add_executable(ttest01 ttest01.c)
 add_executable(mc_bugged1 mc_bugged1.c)
+add_executable(mc_bugged2 mc_bugged2.c)
 
 target_link_libraries(alltoall2 m simgrid smpi )
 target_link_libraries(alltoall_basic m simgrid smpi )
@@ -45,5 +46,6 @@ target_link_libraries(smpi_sendrecv m simgrid smpi )
 target_link_libraries(smpi_traced m simgrid smpi )
 target_link_libraries(ttest01 m simgrid smpi )
 target_link_libraries(mc_bugged1 m simgrid smpi )
+target_link_libraries(mc_bugged2 m simgrid smpi )
 
 set_target_properties(smpi_sendrecv PROPERTIES RENAME sendrecv)
