--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ simgrid.anjuta
 Debug/
 .emacs.desktop
 tags
+callgrind.out.*
 
 ################################################
 ### Examples and traces
@@ -121,6 +122,7 @@ examples/msg/tracing/volume
 examples/msg/mc/bugged3
 examples/msg/mc/random_test
 examples/msg/chord/chord
+examples/msg/token_ring/token_ring
 examples/simdag/ex_sd_seq_access
 examples/simdag/sd_seq_access
 examples/msg/icomms/peer
