--- a/src/smpi/smpif2c.in
+++ b/src/smpi/smpif2c.in
@@ -16,6 +16,7 @@ foreach my $fortran (@ARGV) {
    die "F2C failed\n" if $?;
    open F2C,"<$output";
    my $started = 0;
+   my $cutext = 0;
    print $tmp "#ifndef INTEGER_STAR_8\n";
    print $tmp "#define INTEGER_STAR_8\n";
    print $tmp "#endif\n";
@@ -41,6 +42,15 @@ foreach my $fortran (@ARGV) {
       }
       if(/\/\* Table of constant values \*\// || /MAIN__/) {
          $started = 0;
+      }
+      if(/extern \/\* Subroutine \*\//) {
+         $cutext = 1;
+      }
+      if($cutext) {
+         if(/;$/) {
+            $cutext = 0;
+         }
+         next;
       }
       if(/\/* Main program alias \*\/\s*int\s+.*\s*\(\s*\)\s*{(.*)}/) {
          $_ = "int smpi_simulated_main(int argc, char** argv) { smpi_process_init(&argc, &argv); $1 }\n";
